// The purpose of the changelog is to provide a concise overview of what was changed.
// The purpose of the changelog format is to make it more organized.
// If you want to add an entry to the changelog, then please add it to the section without a release date and version.
// If there is no such section, then copypaste the previous version, remove the info, and put the result below the commented section.
// Below is the format and the purpose of each field and section:
// Versioning follows the x.y.z pattern. Since 0.8.0, the increment has the following meaning:
// z - it's a bugfix release
// y - it's a feature release
// x - it's backwards-incompatible
//
// Version: x.y.z
// Date: Month Day Year of the release
//     Features:
//         First go new features. They usually start with "Add". If they mostly add things, they go to this part.
//         Then go the changes in the existing behavior. They usually start with "Update".
//     Bugfixes:
//         Bugfixes go there.
//     Internal changes:
//         Changes to the code that do not affect the behavior of the program.

----------------------------------------------------------------------------------------------------------------------
Version:
Date:
    Features:
        - Add Ctrl+Shift+Click to add the most cost-effective, accessible recipe for an item.
        - Better accessibility analysis for Ultracube.
    Fixes:
        - Fix icon rendering.
        - Hide fluid temperature options when not part of a recipe or not accepted by that recipe.
        - Modify text colors for highlighted rows in dark mode to improve readability.
    Internal changes:
        - Enable mod-fixes for the data, data-updates, and data-final-fixes files.
----------------------------------------------------------------------------------------------------------------------
Version: 2.14.0
Date: June 15th 2025
    Features:
        - Module templates can be automatically applied to new recipe rows, on a per-template basis.